syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.kyriexu.rpc";
option java_outer_classname = "AntPathMatch";
option go_package = "gateway/common/rpc";

package rpc;


service AntPathMatcher{
    rpc match(stream GoRequest) returns (Result) {}
}

message GoRequest {
  string realPath = 1;
  string method = 2;
  string remoteAddr = 3;
  string proto = 4;
  map<string,Header> header = 5;
}

message Header{
  repeated string HeaderValue = 1;
}

message Result{
    bool res = 1;
}